# -Temperature-and-humidity

./: CMakeLists.txt  ModbusSettings.h  README.md  databasepicture.cpp  databasepicture.h  databasepicture.ui  deb.cpp  deb.h  deb.ui  image.qrc  login.cpp  login.h  login.ui  loginIDandPassword.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mymodbus.cpp  mymodbus.h  mymodbus.ui  mymodbuswork.cpp  mymodbuswork.h  myserials.cpp  myserials.h  myserials.ui  myserialwork.cpp  myserialwork.h  networkwork.cpp  networkwork.h  sql.cpp  sql.h  sql.ui  sqlitework.cpp  sqlitework.h
img/: picture.qrc  新建文本文档.txt
